escrow/tests/snapshots/snapshots__snapshot_complete_lifecycle.snap
---
source: escrow/tests/snapshots.rs
assertion_line: 275
expression: "EscrowSnapshot::from_escrow(&initial)"
---
{
  "invoice_id": "Symbol(INV_SNAP_LIFECYCLE)",
  "admin_debug": "Contract(CAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAFCT4)",
  "sme_address_debug": "Contract(CAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAHK3M)",
  "amount": 50000000000,
  "funding_target": 50000000000,
  "funded_amount": 0,
  "yield_bps": 1200,
  "maturity": 0,
  "status": 0
}
