escrow/tests/snapshots/snapshots__snapshot_init_fresh_escrow.snap
---
source: escrow/tests/snapshots.rs
assertion_line: 106
expression: snapshot
---
{
  "invoice_id": "Symbol(INV_SNAP_001)",
  "admin_debug": "Contract(CAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAFCT4)",
  "sme_address_debug": "Contract(CAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAHK3M)",
  "amount": 100000000000,
  "funding_target": 100000000000,
  "funded_amount": 0,
  "yield_bps": 800,
  "maturity": 1000,
  "status": 0
}
