escrow/tests/snapshots/snapshots__snapshot_multi_investor_funding.snap
---
source: escrow/tests/snapshots.rs
assertion_line: 337
expression: snapshot
---
{
  "invoice_id": "Symbol(INV_SNAP_MULTI)",
  "admin_debug": "Contract(CAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAFCT4)",
  "sme_address_debug": "Contract(CAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAHK3M)",
  "amount": 100000000000,
  "funding_target": 100000000000,
  "funded_amount": 99999999999,
  "yield_bps": 800,
  "maturity": 0,
  "status": 0
}
